--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
 <h1>{{title}}</h1>
-<app-heroes>..load..</app-heroes>
-<app-messages>...load...</app-messages>
+<router-outlet>..load..</router-outlet>
+<app-messages>..load..</app-messages>
